[package]
name = "place_csv_walker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
btoi = "0.4.2"
image = "0.24.1"

[profile.release]
debug = true
